--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Point.cs" />
     <Compile Include="HorizontalLine.cs" />
     <Compile Include="VerticalLine.cs" />
+    <Compile Include="Figure.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
